<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.app.activitys.SettingActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/show_profile_photos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorLink="?attr/colorPrimary" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/switch1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/switch1"
        android:layout_below="@+id/switch1"
        android:layout_marginTop="10dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/display_attached_photo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/switch3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/switch3"
        android:layout_below="@+id/switch3"
        android:layout_marginTop="10dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/online"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorLink="?attr/colorPrimary" />

    <EditText
        android:id="@+id/editText"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/switch2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/switch2"
        android:gravity="center"
        android:maxLength="32"
        android:layout_below="@+id/switch2"
        android:hint="@string/enter_key_this"
        style="@android:style/Widget.Holo.Light.EditText" />

    <Button
        android:layout_below="@id/editText"
        android:id="@+id/apply"
        android:text="Запомнить ключ"
        android:layout_alignEnd="@+id/switch2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/primary"
        android:textColor="@android:color/white"
        android:layout_alignRight="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText2"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/switch2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/switch2"
        android:gravity="center"
        android:layout_below="@+id/apply"
        android:hint="Введите сообщение"
        style="@android:style/Widget.Holo.Light.EditText" />

    <Button
        android:id="@+id/crypt"
        android:text="Зашифровать"
        android:layout_below="@+id/editText2"
        android:layout_alignEnd="@+id/switch2"
        android:background="@color/primary"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:layout_alignRight="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/decrypt"
        android:text="Дешифровать"
        android:layout_below="@+id/crypt"
        android:layout_alignEnd="@+id/switch2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/primary"
        android:layout_alignRight="@+id/switch2"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/press_the_button_to_exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/out"
            style="@android:style/Widget.Holo.Button" />
    </LinearLayout>
</RelativeLayout>
